[gd_scene load_steps=28 format=3 uid="uid://dxien6o1svhij"]

[ext_resource type="Texture2D" uid="uid://b741lh8sqmux3" path="res://mainmenu/deathassistant-bg-nochair.jpg" id="1_v71ev"]
[ext_resource type="Texture2D" uid="uid://clpf1xi7fw34s" path="res://mainmenu/deathassistant-chair-doubledsize.png" id="2_h8l7h"]
[ext_resource type="FontFile" uid="uid://cbaee1dai3fnr" path="res://content/assets/font/greatlake/GreatLakesNF.ttf" id="4_12ib1"]
[ext_resource type="Script" uid="uid://46bt22jbrwh6" path="res://content/essentials/press_spaceto_start.gd" id="6_6yrla"]
[ext_resource type="Texture2D" uid="uid://cdiubhvch4y6p" path="res://mainmenu/Buttons/PressSpacetoStart.png" id="6_cm5ll"]
[ext_resource type="Texture2D" uid="uid://ngjurrwpv43u" path="res://mainmenu/BackgorundMainMenu.png" id="7_d8is5"]
[ext_resource type="Texture2D" uid="uid://2no1f1axwyg8" path="res://mainmenu/Buttons/FolderMainMenu.png" id="8_3ohec"]
[ext_resource type="AudioStream" uid="uid://c60mcob6tvlr8" path="res://content/assets/sounds/SFX/opening-door-411632.mp3" id="9_fpu2k"]
[ext_resource type="Script" path="res://content/essentials/folder_main_menu.gd" id="10_12ib1"]
[ext_resource type="AudioStream" uid="uid://bqm8sshhwggcw" path="res://content/assets/sounds/SFX/microwave-ding-104123.mp3" id="11_3ohec"]
[ext_resource type="Texture2D" uid="uid://r3fobn3dnm3v" path="res://mainmenu/Buttons/SettingsButton.png" id="11_tyahw"]
[ext_resource type="Texture2D" uid="uid://cajhkfow5khjh" path="res://mainmenu/Buttons/ExitButton.png" id="12_nwdj7"]
[ext_resource type="Texture2D" uid="uid://b1sx5a32uhdjs" path="res://mainmenu/Buttons/VolumeButton.png" id="13_0uhgg"]
[ext_resource type="Texture2D" uid="uid://bs1w536xd7t38" path="res://mainmenu/Buttons/BackButton.png" id="14_12ib1"]
[ext_resource type="FontFile" uid="uid://bipnm33a28q40" path="res://content/assets/font/kastelvoire/KASTEL VOIRE TTF.ttf" id="16_3ohec"]
[ext_resource type="AudioStream" uid="uid://4eysqi48jifr" path="res://content/assets/sounds/BGM/Main menu/Jazz Music #9 (No Copyright).mp3" id="16_cm5ll"]
[ext_resource type="AudioStream" uid="uid://bf1bl6hlv17jx" path="res://content/assets/sounds/SFX/clothesdrop(2nd closest I can find for push).mp3" id="17_tyahw"]

[sub_resource type="Animation" id="Animation_6yrla"]
resource_name = "Fade In"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.65, 1.5333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0.8826262, 0.7557728, 0.6711312, 1)]
}

[sub_resource type="Animation" id="Animation_s85f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d8is5"]
_data = {
&"Fade In": SubResource("Animation_6yrla"),
&"RESET": SubResource("Animation_s85f4")
}

[sub_resource type="GDScript" id="GDScript_s85f4"]
script/source = "extends Sprite2D

var pressed_space: bool = false

func _input(event: InputEvent) -> void:
	if event is InputEventKey and event.pressed and event.keycode == KEY_SPACE and not pressed_space:
		pressed_space = true
		$\".\".visible = false
		%BackgorundMainMenu.visible = true
		%FolderMainMenu.visible = true
		$\"../Main Menu/BackgorundMainMenu/AnimationPlayer\".play(\"Drop\")
		%AnimationPlayer.play(\"Slide\")
"

[sub_resource type="Animation" id="Animation_d8is5"]
resource_name = "Drop"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.83),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(641.99994, -436), Vector2(642, 323)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-436, 0, 0, 0.90350556, 1337.4691, 334.90222, -0.6264944, -260.86694, 0.5150326, 214.45518),
"times": PackedFloat32Array(0, 1.3633333)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Push:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p5brt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(584, 320)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(642, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(323, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Push:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhxrm"]
_data = {
&"Drop": SubResource("Animation_d8is5"),
&"RESET": SubResource("Animation_p5brt")
}

[sub_resource type="Animation" id="Animation_12ib1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.06981317]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(643, 383.00003)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(621.99994, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-493.99985, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Folder:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0uhgg"]
resource_name = "Slide"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.25, 3.0333335, 3.3333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.9075712, -0.19674616, -0.06981317]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.9661257, 1.9666667, 3.3333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(621.99994, -493.99985), Vector2(621.99994, -493.99985), Vector2(674, 350)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(621.99994, -0.25, 0, 0.25, 0, 674, -0.22786796, -8.666677, 0, 0),
"times": PackedFloat32Array(1.9661257, 3.3333335)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(-493.99985, -0.16765325, -341.75595, 0.23387432, 476.74557, 350, -0.56666684, 61.763123, 0, 0),
"times": PackedFloat32Array(1.9661257, 3.3333335)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Folder:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.2333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cm5ll"]
_data = {
&"RESET": SubResource("Animation_12ib1"),
&"Slide": SubResource("Animation_0uhgg")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title Screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_6yrla")

[node name="CanvasLayer" type="CanvasLayer" parent="Title Screen"]

[node name="Background" type="ColorRect" parent="Title Screen/CanvasLayer"]
offset_right = 1283.0
offset_bottom = 726.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="DeathassistantBgNochair" type="Sprite2D" parent="Title Screen/CanvasLayer"]
position = Vector2(638.69995, 357.04996)
scale = Vector2(0.6180208, 0.62212956)
texture = ExtResource("1_v71ev")

[node name="DeathassistantChairDoubledsize" type="Sprite2D" parent="Title Screen/CanvasLayer/DeathassistantBgNochair"]
visible = false
position = Vector2(6.957796, -147.95947)
scale = Vector2(0.40451714, 0.40184554)
texture = ExtResource("2_h8l7h")

[node name="TableMainMenu" type="Sprite2D" parent="Title Screen/CanvasLayer/DeathassistantBgNochair"]
visible = false
position = Vector2(21.520418, -3.2950559)
scale = Vector2(0.98702186, 0.98050314)

[node name="CanvasModulate" type="CanvasModulate" parent="Title Screen/CanvasLayer"]
position = Vector2(57, 31)
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title Screen/CanvasLayer/CanvasModulate"]
libraries = {
&"": SubResource("AnimationLibrary_d8is5")
}
autoplay = "Fade In"

[node name="TitleMain" type="Label" parent="Title Screen/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -403.0
offset_top = -54.0
offset_right = 404.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.038397167, 0.038397167, 0.03839716, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("16_3ohec")
theme_override_font_sizes/font_size = 180
text = "ASSISTANT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleMain" type="Label" parent="Title Screen/CanvasLayer/TitleMain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -403.0
offset_top = -217.0
offset_right = 404.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8580951, 0.340155, 0.37689254, 1)
theme_override_colors/font_outline_color = Color(0.038397167, 0.038397167, 0.03839716, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("4_12ib1")
theme_override_font_sizes/font_size = 90
text = "Death"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="Title Screen/CanvasLayer"]
offset_left = -12.0
offset_top = -36.0
offset_right = 1499.0
offset_bottom = 67.979996
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Title Screen/CanvasLayer"]
offset_left = -16.0
offset_top = 571.0
offset_right = 1475.0
offset_bottom = 708.0
color = Color(0, 0, 0, 1)

[node name="PressSpacetoStart" type="Sprite2D" parent="Title Screen/CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.7607843)
position = Vector2(631, 663)
scale = Vector2(0.29, 0.29)
texture = ExtResource("6_cm5ll")
script = SubResource("GDScript_s85f4")

[node name="Main Menu" type="Node" parent="Title Screen/CanvasLayer"]

[node name="BackgorundMainMenu" type="Sprite2D" parent="Title Screen/CanvasLayer/Main Menu"]
unique_name_in_owner = true
visible = false
position = Vector2(642, 323)
scale = Vector2(0.67291665, 0.76365745)
texture = ExtResource("7_d8is5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title Screen/CanvasLayer/Main Menu/BackgorundMainMenu"]
libraries = {
&"": SubResource("AnimationLibrary_dhxrm")
}

[node name="Push" type="AudioStreamPlayer" parent="Title Screen/CanvasLayer/Main Menu/BackgorundMainMenu"]
stream = ExtResource("9_fpu2k")
volume_db = -8.0

[node name="FolderMainMenu" type="Sprite2D" parent="Title Screen/CanvasLayer/Main Menu"]
unique_name_in_owner = true
position = Vector2(621.99994, -493.99985)
rotation = -0.06981317
scale = Vector2(0.62, 0.62)
texture = ExtResource("8_3ohec")
script = ExtResource("10_12ib1")

[node name="Ding" type="AudioStreamPlayer2D" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
unique_name_in_owner = true
stream = ExtResource("11_3ohec")
volume_db = -5.0

[node name="Start" type="Button" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
offset_left = 210.83163
offset_top = -101.66987
offset_right = 1132.8318
offset_bottom = 192.33014
scale = Vector2(0.195, 0.195)
theme_override_colors/font_color = Color(0.26666668, 0.22745098, 0.20392157, 1)
theme_override_colors/font_pressed_color = Color(1, 0.8117647, 0.4862745, 1)
theme_override_colors/font_hover_color = Color(0.5355062, 0.47178286, 0.4336616, 1)
theme_override_fonts/font = ExtResource("16_3ohec")
theme_override_font_sizes/font_size = 300
text = "START"
flat = true

[node name="Settings" type="Button" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
visible = false
offset_left = 188.30586
offset_top = -103.245026
offset_right = 1503.3059
offset_bottom = 205.75497
scale = Vector2(0.195, 0.195)
icon = ExtResource("11_tyahw")
flat = true

[node name="Exit" type="Button" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
visible = false
offset_left = 235.59633
offset_top = -62.750793
offset_right = 856.5963
offset_bottom = 218.2492
scale = Vector2(0.195, 0.195)
icon = ExtResource("12_nwdj7")
flat = true

[node name="Volume" type="Button" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
visible = false
offset_left = 197.85823
offset_top = -170.4844
offset_right = 1303.8583
offset_bottom = 138.5156
scale = Vector2(0.195, 0.195)
icon = ExtResource("13_0uhgg")
flat = true

[node name="Back" type="Button" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
visible = false
offset_left = 229.56558
offset_top = -22.751461
offset_right = 968.56555
offset_bottom = 270.24854
scale = Vector2(0.195, 0.195)
icon = ExtResource("14_12ib1")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_cm5ll")
}

[node name="Folder" type="AudioStreamPlayer" parent="Title Screen/CanvasLayer/Main Menu/FolderMainMenu"]
stream = ExtResource("17_tyahw")
volume_db = -5.0

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="Title Screen"]
stream = ExtResource("16_cm5ll")
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="Title Screen/CanvasLayer/Main Menu/FolderMainMenu/Start" to="Title Screen" method="_on_start_pressed"]
[connection signal="pressed" from="Title Screen/CanvasLayer/Main Menu/FolderMainMenu/Settings" to="Title Screen" method="_on_settings_pressed"]
[connection signal="pressed" from="Title Screen/CanvasLayer/Main Menu/FolderMainMenu/Exit" to="Title Screen" method="_on_exit_pressed"]
